2006-02-10  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd (menucomment): more inclusive.
	(enumerate): allow indexes.
	From Torsten.

2006-02-06  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd: apparently we cannot have -- in an XML
	comment.  Kludge.

2006-02-05  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_makeinfo): eval $makeinfo, for gettext
	0.14.5's complex $MAKEINFO definition.

2006-01-30  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd: many additions and fixes from
	Torsten Bronger.

2006-01-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\sectionheading): \nobreak before the \vbox
	with the heading.
	Report from: Norbert Preining, 2 Nov 2005 10:07:57 +0100,
	Debian bug 276000.

2006-01-25  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.c (cm_accent_generic_no_headers): do nothing
	if end == 0 (accent command in @menu with --no-headers).
	Report from Akim Demaille, 23 Jan 2006 16:41:38 +0100.

2006-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (key): more examples.

2006-01-18  Akim Demaille  <akim@epita.fr>

	Sometimes the temporary directory remains.
	Reported by Wybo Dekker.
	* util/defs.in (assert_files): New.
	* util/texi2dvi.test: Use it.
	Extend to check the local builds.
	* util/texi2dvi (aux_file_p, index_file_p, xref_file_p): Check
	that the file exists.
	(generated_files_get): Simplify according to these changes.
	(remove, cleanup): New.
	Use the latter in the cleaning trap.
	(mostly_clean): Use them.

2006-01-17  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (generated_files_get): Skip nonexistent files
	earlier.

2006-01-15  Karl Berry  <karl@gnu.org>

	* info/infodoc.c (info_internal_help_text): combine messages
	which are single sentences into one string.
	Report from Clytie Siddall, via
	http://sourceforge.net/tracker/index.php?func=detail&aid=1406541&group_id=40033&atid=426818.

	* po/POTFILES.in: add missing makeinfo/xref.c, makeinfo/float.c.
	Report from Torsten.

2006-01-09  Akim Demaille  <akim@epita.fr>
